fixed layout issue for preview template and DSTP-537

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
 <div *ngIf="!isPreview; else preview">
-  <dsod-navbar></dsod-navbar>
-  <dsod-profile-panel></dsod-profile-panel>
-  <div class="page-container">
-    <router-outlet></router-outlet>
-  </div>
-  <dsod-footer></dsod-footer>
+ <div class="site-wrap">
+<dsod-navbar></dsod-navbar>
+<dsod-profile-panel></dsod-profile-panel>
+<div class="page-container">
+  <router-outlet></router-outlet>
+</div>
+<dsod-footer></dsod-footer>
+ </div>
 </div>
 <ng-template #preview>
   <router-outlet></router-outlet>
