--- a/src/app/pages/dso-practice/components/sponsors-posts/sponsors-post.component.html
+++ b/src/app/pages/dso-practice/components/sponsors-posts/sponsors-post.component.html
@@ -4,8 +4,8 @@
       <div class="col-6">
         <div class="sponsor-desc">
           <div class="sponsor-header mb-3">
-            <img src="assets/images/icons/{{topic.sponsorName}}-bar.jpg" alt="">
-          </div>
+            <img class="img-fluid" src="assets/images/icons/{{topic.sponsorName}}-bar.jpg" alt="">
+          </div> 
           <h2>{{topic.title}}</h2>
           <span>{{topic.author.fullName}}</span>
           <div class="d-flex justify-content-between align-items-center date-wrap">
