--- a/src/app/pages/sponsors/components/sponsor-posts/sponsor-posts.component.html
+++ b/src/app/pages/sponsors/components/sponsor-posts/sponsor-posts.component.html
@@ -4,7 +4,7 @@
       <div class="col-6">
         <div class="sponsor-desc">
           <div class="sponsor-header">
-            <img class="mb-3" src="assets/images/icons/{{post.sponsorName}}-bar.jpg" alt="">
+            <img class="mb-3 img-fluid" src="assets/images/icons/{{post.sponsorName}}-bar.jpg" alt="">
           </div>
           <h2>{{post.title}}</h2>
           <span>{{post.author.fullName}}</span>
