--- a/src/styles.scss
+++ b/src/styles.scss
@@ -161,3 +161,19 @@ ul, li, ul li {
     width: 100%;
   }
 }
+
+
+
+// @media only screen and (max-width:1170px) {
+//   body {
+//     overflow-x: hidden;
+//   }
+
+//    .site-wrap {
+//      min-width: 100%;
+//   }
+//   .container {
+//     max-width: 100%;
+//     width: 100%;
+//   }
+// }
