--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,6 +1,6 @@
 <div class="about-container">
   <div class="container">
-    <h1 class="title">About US</h1>
+    <h1 class="title">About Us</h1>
     <div class="content">
       <p>
         DSODentist.com is the first digital services platform dedicated to the dental support organization (DSO) sector.
