added loader image

--- a/src/app/pages/education/components/education-item-card/education-item-card.component.html
+++ b/src/app/pages/education/components/education-item-card/education-item-card.component.html
@@ -4,9 +4,8 @@
   <source src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4" type="video/webm">
 </video> -->
   <div class="video-wrapper">
-    <video #video width="320" height="" controls muted>
-<source src={{sampleVideo.url}}
-  type="video/webm">
+    <video #video width="320" height="" controls muted poster="assets/images/icons/spinner.gif">
+      <source src={{sampleVideo.url}} type="video/webm">
     </video>
   </div>
   <div class="content-container">
