--- a/src/app/pages/preview/components/video-preview.component.html
+++ b/src/app/pages/preview/components/video-preview.component.html
@@ -10,7 +10,7 @@
   <div class="row">
     <div class="col-12">
       <div class="md-5 mt-5">
-        <div *ngIf="content.featuredMedia" class="article-thumbnail" style="margin-top:20px;">
+        <div *ngIf="content.featuredMedia" class="featured-media-container">
           <img *ngIf="content.featuredMedia?.type === '1' || content.featuredMedia?.type === '4'" [src]="getUrl(content.featuredMedia.code.thumbnail)" />
           <audio *ngIf="content.featuredMedia?.type === '2'" controls>
             <source [src]="getUrl(content.featuredMedia.code.thumbnail)" type="audio/mp3">
