--- a/src/app/pages/preview/components/podcast-preview.component.html
+++ b/src/app/pages/preview/components/podcast-preview.component.html
@@ -1,38 +1,31 @@
 <div class="container">
-  <div class="row">
-    <div class="col-12">
-      <div class="top-head mb-5 d-flex justify-content-between align-items-center ng-star-inserted">
-        <div class="pod-title d-flex align-items-center">
-          <img alt="" src="assets/images/podcast-icon.png">
-          <h3>Podcasts</h3>
-        </div>
-        <span>{{content.categoryName}}</span>
-        <span></span>
-      </div>
+  <div class="pod-title-container row">
+    <div class="pod-title">
+      <img alt="" src="assets/images/podcast-icon.png">
+      <h3 class="title">Podcasts</h3>
     </div>
+    <span class="pod-category-name">{{content.categoryName}}</span>
   </div>
-  <div class="row">
-    <div class="col-2">
-      <div>
-        <div class="speaker-thumbnail">
-          <img *ngIf="content.authorPhotoUrl; else authorPlaceholder" src={{content.authorPhotoUrl}} class="img-fluid">
-          <ng-template #authorPlaceholder>
-            <img src="assets/images/author-placeholder.png" class="img-fluid">
-          </ng-template>
-        </div>
-        <div class="speaker-name" *ngIf="content.author">
-          <span>{{content.author.fullName}}</span>
-        </div>
+  <div class="author-container">
+    <div class="author-info">
+      <div class="speaker-thumbnail">
+        <img *ngIf="content.authorPhotoUrl; else authorPlaceholder" src={{content.authorPhotoUrl}} class="img-fluid">
+        <ng-template #authorPlaceholder>
+          <img src="assets/images/author-placeholder.png" class="img-fluid">
+        </ng-template>
+      </div>
+      <div class="speaker-name" *ngIf="content.author">
+        <span>{{content.author.fullName}}</span>
       </div>
     </div>
-    <div class="col-8 mb-5 d-flex justify-content-center align-items-center">
-      <h3 style="color: #7D7C7C;">{{content.title}}</h3>
+    <div class="content-title">
+      <h3>{{content.title}}</h3>
     </div>
   </div>
   <div class="row">
     <div class="col-12">
       <div class="md-5 mt-5">
-        <div *ngIf="content.featuredMedia" class="article-thumbnail" style="margin-top:20px;">
+        <div *ngIf="content.featuredMedia" class="featured-media-container">
           <img *ngIf="content.featuredMedia?.type === '1' || content.featuredMedia?.type === '4'" [src]="getUrl(content.featuredMedia.code.thumbnail)" />
           <audio *ngIf="content.featuredMedia?.type === '2'" controls>
             <source [src]="getUrl(content.featuredMedia.code.thumbnail)" type="audio/mp3">
