--- a/src/app/pages/education/components/education-item-card/education-item-card.component.html
+++ b/src/app/pages/education/components/education-item-card/education-item-card.component.html
@@ -1,10 +1,6 @@
 <div class="card-item-container" (mouseenter)="onMouseOver($event)" (mouseleave)="onMouseLeave($event)">
-  <!-- <img class="img-card" src="./assets/images/education/card.png" /> -->
-  <!-- <video width="240" height="360" id="videoElm" autoplay muted>
-  <source src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4" type="video/webm">
-</video> -->
   <div class="video-wrapper">
-    <video #video width="320" height="" controls muted poster="assets/images/icons/spinner.gif">
+    <video #video width="320" height="" controls muted>
       <source src={{sampleVideo.url}} type="video/webm">
     </video>
   </div>
