--- a/src/app/pages/preview/components/content.scss
+++ b/src/app/pages/preview/components/content.scss
@@ -170,6 +170,9 @@
   margin-top: 20px;
   width: 50%;
   margin: auto;
+  img {
+    width: 100%;
+  }
 }
 @media only screen and (max-width:768px) {
   .featured-media-container {
