--- a/src/app/pages/home/components/podcasts/podcasts.component.html
+++ b/src/app/pages/home/components/podcasts/podcasts.component.html
@@ -16,7 +16,7 @@
             <img src="assets/images/arrow-right.png" alt="">
           </a>
           <div class="row">
-            <div class="col-6">
+            <div class="col-lg-6 col-md-12">
               <div class="featured-podcasts-block">
                 <div class="podcasts-block-header">
                   <h4>Featured Podcast</h4>
@@ -33,7 +33,7 @@
                   [imageIndex]="imageIndex"></dsod-podcast-items>
               </div>
             </div>
-            <div class="col-6">
+            <div class="col-lg-6 col-md-12">
               <dsod-podcasts-by [podcasts]="podcasts$ | async" [indexEnd]="indexEnd" [indexStart]="indexStart"
                 [imageIndex]="imageIndex"></dsod-podcasts-by>
             </div>
