--- a/src/app/pages/home/components/latest-item/latest-item.component.html
+++ b/src/app/pages/home/components/latest-item/latest-item.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-5">
       <div class="latest-block-thumbnail">
-        <img src={{latestTopic.featuredMedia.code.originalUrl}} class="img-fluid" alt="Feautred Thumbnail Large"
+        <img [src]="getImageUrl(latestTopic.featuredMedia.code.thumbnail)" class="img-fluid" alt="Feautred Thumbnail Large"
           (click)="navigateTo(latestTopic)">
         <a href="javascript:void(0)" (click)="navigateTo(latestTopic)" class="read-about">
           <img src="assets/images/icons/{{latestTopic.contentTypeName}}.png" alt="">
