--- a/src/app/pages/home/components/slider/slider-item.component.scss
+++ b/src/app/pages/home/components/slider/slider-item.component.scss
@@ -4,6 +4,7 @@
   .glide__slide {
     position: relative;
     overflow: hidden;
+    height: calc(100vh - 96px);
 
     >img {
       width: 100%;
@@ -13,7 +14,7 @@
       display: -ms-flexbox;
       display: flex;
       margin: auto;
-      max-height: 400px;
+      height: 100%;
     }
 
     .slide-caption {
@@ -75,6 +76,14 @@
           max-width: 100%;
         }
       }
+    }
+  }
+}
+
+@media only screen and (max-width:1199px) {
+  :host {
+    .glide__slide {
+      height: auto;
     }
   }
 }
