--- a/src/app/pages/home/components/trending/trending.component.html
+++ b/src/app/pages/home/components/trending/trending.component.html
@@ -1,11 +1,17 @@
 <div>
   <section class="trending-videos">
     <h2 class="section-title">Trending Videos</h2>
-    <div *ngFor="let topic of trendingTopics">
-      <dsod-trending-item [trendingItem]="topic"></dsod-trending-item>
+    <div class="row">
+      <div class="col-lg-12 col-md-7">
+        <div *ngFor="let topic of trendingTopics">
+          <dsod-trending-item [trendingItem]="topic"></dsod-trending-item>
+        </div>
+      </div>
+      <div class="col-lg-12 col-md-5">
+        <a [routerLink]="['/sponsors/GSK']">
+          <dsod-sponsored-ad *ngIf="trendingTopics.length"></dsod-sponsored-ad>
+        </a>
+      </div>
     </div>
-    <a [routerLink]="['/sponsors/GSK']">
-      <dsod-sponsored-ad *ngIf="trendingTopics.length"></dsod-sponsored-ad>
-    </a>
   </section>
 </div>
