--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,10 +7,10 @@
 <dsod-featured-topics [featuredTopics]="featuredTopics$ | async"></dsod-featured-topics>
 <div class="container">
   <div class="row">
-    <div class="col-8">
+    <div class="col-lg-8 col-md-12">
       <dsod-latest [latestTopics]="latestTopics$ | async"></dsod-latest>
     </div>
-    <div class="col-4">
+    <div class="col-lg-4 col-md-12">
       <dsod-trending [trendingTopics]="trendingTopics$ | async"></dsod-trending>
     </div>
   </div>
@@ -19,10 +19,10 @@
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-xl-5 col-5">
+      <div class="col-xl-5 col-lg-5 col-md-12">
         <dsod-events></dsod-events>
       </div>
-      <div class="col-xl-7 col-7">
+      <div class="col-xl-7 col-lg-7 col-md-12">
         <dsod-our-sponsors [sponsoredTopics]="sponsoredTopics$ | async"></dsod-our-sponsors>
       </div>
     </div>
