--- a/src/app/pages/preview/components/article-preview.component.html
+++ b/src/app/pages/preview/components/article-preview.component.html
@@ -45,7 +45,7 @@
       <dsod-gallery [photosUrls]="content.photoUrls"></dsod-gallery>
       <h2 class="section-title" *ngIf="content.relativeTopicList">Related Content</h2>
       <div class="row">
-        <div class="col-4" *ngFor="let topic of content.relativeTopicList">
+        <div class="col-12 col-sm-6 col-md-4" *ngFor="let topic of content.relativeTopicList">
           <dsod-related-content [content]="topic" [contentTypeName]="content.contentTypeName"></dsod-related-content>
         </div>
       </div>
