made inner pages responsive

--- a/src/app/pages/dso-practice/components/sponsors-posts/sponsors-post.component.scss
+++ b/src/app/pages/dso-practice/components/sponsors-posts/sponsors-post.component.scss
@@ -89,3 +89,26 @@
     }
   }
 }
+
+@media only screen and (max-width:1440px) {
+  :host {
+    .practice-sponsors {
+      .sponsor-desc {
+        h2 {
+          font-size: 28px;
+        }
+      }
+    }
+  }
+}
+@media only screen and (max-width:1199px) {
+  :host {
+    .practice-sponsors {
+      .sponsor-desc {
+        h2 {
+          font-size: 25px;
+        }
+      }
+    }
+  }
+}
