--- a/src/app/pages/events/components/training/training.component.html
+++ b/src/app/pages/events/components/training/training.component.html
@@ -1,41 +1,47 @@
-<div class="come-with-us">
-  <img class="img-fluid" src="assets/images/edu-pillar.png" alt="">
-  <div class="come-with-content">
-    <h3>Come Train With Us</h3>
-    <h4>Our classroom has no walls</h4>
+<div class="row">
+  <div class="col-lg-12 col-md-5">
+    <div class="come-with-us">
+      <img class="img-fluid" src="assets/images/edu-pillar.png" alt="">
+      <div class="come-with-content">
+        <h3>Come Train With Us</h3>
+        <h4>Our classroom has no walls</h4>
+      </div>
+    </div>
   </div>
-</div>
-<div class="events-training-content">
-  <p>Enjoy DSODentist original content, on-demand education, and more—right from your smartphone or tablet. By
-    providing 24/7 access to Virtual Events, In-Person Events, and Partner Events, the DSODentist platform supports
-    dental professionals seeking to enhance their knowledge and skills in important topics in dentistry. Our goals:</p>
-  <ul>
-    <li>• Provide opportunities for learners to increase their awareness and familiarity with innovative technologies
-      and tools</li>
-    <li>• Unite like-minded professionals who share a passion for lifelong learning</li>
-    <li>• Establish an environment that fosters academic excellence</li>
-    <li>• Promote a continuum of enriching content that will enhance critical thinking, clinical training, and ensure
-      continued professional development</li>
-  </ul>
-  <p>View here on the web or via the DSODentist app on your phone or tablet. All content is reviewed by subject matter
-    experts to ensure its clinical relevance, scientific accuracy, and enduring value. </p>
-  <p>The continuum will be delivered through a series of engaging webinars as well as didactic “hands-on” training
-    activities at convenient locations across the country. Learning opportunities include live and archived
-    virtual
-    events as well as focused Partner Events conducted by GlaxoSmithKline, Align Technologies, and Nobel Biocare, N.A.
-    in key facets of dentistry.</p>
-</div>
-<div class="corporate-sponsors">
-  <h3>Our Corporate Sponsors</h3>
-  <ul>
-    <li>
-      <img src="./assets/images/align-logo.png" alt="">
-    </li>
-    <li>
-      <img src="./assets/images/gsk-icon-sm.png" alt="">
-    </li>
-    <li>
-      <img src="./assets/images/nb-logo.png" alt="">
-    </li>
-  </ul>
+  <div class="col-lg-12 col-md-7">
+    <div class="events-training-content">
+      <p>Enjoy DSODentist original content, on-demand education, and more—right from your smartphone or tablet. By
+        providing 24/7 access to Virtual Events, In-Person Events, and Partner Events, the DSODentist platform supports
+        dental professionals seeking to enhance their knowledge and skills in important topics in dentistry. Our goals:</p>
+      <ul>
+        <li>• Provide opportunities for learners to increase their awareness and familiarity with innovative technologies
+          and tools</li>
+        <li>• Unite like-minded professionals who share a passion for lifelong learning</li>
+        <li>• Establish an environment that fosters academic excellence</li>
+        <li>• Promote a continuum of enriching content that will enhance critical thinking, clinical training, and ensure
+          continued professional development</li>
+      </ul>
+      <p>View here on the web or via the DSODentist app on your phone or tablet. All content is reviewed by subject matter
+        experts to ensure its clinical relevance, scientific accuracy, and enduring value. </p>
+      <p>The continuum will be delivered through a series of engaging webinars as well as didactic “hands-on” training
+        activities at convenient locations across the country. Learning opportunities include live and archived
+        virtual
+        events as well as focused Partner Events conducted by GlaxoSmithKline, Align Technologies, and Nobel Biocare, N.A.
+        in key facets of dentistry.</p>
+    </div>
+    <div class="corporate-sponsors">
+      <h3>Our Corporate Sponsors</h3>
+      <ul>
+        <li>
+          <img src="./assets/images/align-logo.png" alt="">
+        </li>
+        <li>
+          <img src="./assets/images/gsk-icon-sm.png" alt="">
+        </li>
+        <li>
+          <img src="./assets/images/nb-logo.png" alt="">
+        </li>
+      </ul>
+    </div>
+  </div>
 </div>
