--- a/src/app/pages/article/containers/article-page/article.component.html
+++ b/src/app/pages/article/containers/article-page/article.component.html
@@ -1,7 +1,7 @@
 <div class="page-content">
   <div class="container" *ngIf="(pageContent$ | async)">
     <div class="row">
-      <div class="col-9">
+      <div class="col-lg-9">
         <div class="article-content">
           <dsod-article-media [content]="pageContent$ | async" [rating]="!avgRating?(pageContent$ | async)?.avgCommentRating:avgRating"></dsod-article-media>
           <dsod-article-content [content]="(pageContent$ | async)?.content"></dsod-article-content>
@@ -36,14 +36,20 @@
           <dsod-article-reviews [content]="pageContent$ | async" (updateRating)="updateRating($event)"></dsod-article-reviews>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-lg-3">
         <section class="trending-videos" *ngIf="(trendingTopics$ | async).length">
           <h2 class="section-title">Trending Topics</h2>
-          <div *ngFor="let topic of trendingTopics$ | async">
-            <dsod-topic [topic]="topic" [contentLength]=117 [showImage]="true" [showHeader]="true" styleFor="content-sm"
-              [showRating]=true></dsod-topic>
+          <div class="row">
+            <div class="col-lg-12 col-md-7">
+              <div *ngFor="let topic of trendingTopics$ | async">
+                <dsod-topic [topic]="topic" [contentLength]=117 [showImage]="true" [showHeader]="true" styleFor="content-sm"
+                  [showRating]=true></dsod-topic>
+              </div>
+            </div>
+            <div class="col-lg-12 col-md-5">
+              <dsod-sponsored-ad></dsod-sponsored-ad>
+            </div>
           </div>
-          <dsod-sponsored-ad></dsod-sponsored-ad>
         </section>
       </div>
     </div>
