--- a/src/app/pages/home/components/our-sponsors/our-sponsors.component.scss
+++ b/src/app/pages/home/components/our-sponsors/our-sponsors.component.scss
@@ -8,13 +8,16 @@
     border-bottom: 1px solid #8799A7;
 
     h4 {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
       color: $color-primary;
       font-size: 18px;
       padding-right: 30px;
 
       img {
-        align-self: center;
+        -ms-flex-item-align: center;
+            align-self: center;
         margin-right: 20px;
       }
     }
@@ -49,8 +52,12 @@
     background: #f8f8f8;
 
     .sponsors-ortho-block-header {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      justify-content: space-between;
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between;
       padding: 21px 15px 9px;
 
       h4 {
@@ -78,6 +85,7 @@
 
       h4 {
         font-size: 15px;
+        padding-right: 0;
       }
     }
 
