--- a/src/app/pages/home/components/podcasts-by/podcasts-by.component.scss
+++ b/src/app/pages/home/components/podcasts-by/podcasts-by.component.scss
@@ -77,3 +77,23 @@
     }
   }
 }
+
+@media only screen and(max-width:1366px) {
+  .featured-podcasts-block-sm {
+    .podcasts-block-header {
+      padding: 10px;
+
+      h4 {
+        font-size: 13px;
+        margin: 0;
+      }
+    }
+
+    .podcast-block-content {
+      h3 {
+        font-size: 13px;
+        margin: 0;
+      }
+    }
+  }
+}
