--- a/src/app/pages/podcast/containers/podcast-page.component.html
+++ b/src/app/pages/podcast/containers/podcast-page.component.html
@@ -5,11 +5,14 @@
         <dsod-podcast-header [content]="pageContent$ | async"></dsod-podcast-header>
         <div class="podcast-player" *ngIf="content">
           <div class="row">
-            <div class="col-2 pod-thumbnail">
+            <div class="col-lg-3 col-md-4">
               <dsod-content-author [podcast]="content"></dsod-content-author>
             </div>
-            <div class="col-10 pod-visual">
+            <div class="col-lg-7 col-md-6">
               <dsod-audio-player [content]="pageContent$ | async"></dsod-audio-player>
+            </div>
+            <div class="col-lg-2 col-md-2">
+              <dsod-content-actions [content]="content"></dsod-content-actions>
             </div>
           </div>
         </div>
