--- a/src/app/pages/article/containers/article-page/article.component.scss
+++ b/src/app/pages/article/containers/article-page/article.component.scss
@@ -16,4 +16,12 @@
       padding-left: 3px;
     }
   }
+  .carousel-image-container {
+    margin-top: 20px;
+    width: 50%;
+    margin: auto;
+    img {
+      width: 100%;
+    }
+  }
 }
