--- a/src/app/shared/components/essay-carousel/essay-carousel.component.scss
+++ b/src/app/shared/components/essay-carousel/essay-carousel.component.scss
@@ -1,11 +1,12 @@
 /deep/.glide__slide {
   opacity: 0.6;
-
   img {
     max-width: 100%;
   }
-
   &.glide__slide--active {
     opacity: 1;
   }
+}
+.home-banner {
+  position: relative;
 }
